# cxr-foundation

./: .gitignore  01.py  README.md  cxr_classifier_model.pt  cxr_zero_shot_classification.py  train_tf.py  train_torch.py  visualization.py
.github/ISSUE_TEMPLATE/: config.yml
data/: cxr_foundation_dataset.py  download_dataset.py
notebooks/: README.md  classify_images_with_natural_language.ipynb  classify_images_with_natural_language.py  quick_start_with_hugging_face.py  quick_start_with_model_garden.ipynb  retrieve_images_by_text.ipynb  train_data_efficient_classifier.ipynb  train_data_efficient_classifier.py
python/: pyproject.toml  requirements.txt
python/clientside/: client_parity_test.py  clients.py  requirements.in  requirements.txt
python/data_processing/: data_processing_lib.py  data_processing_lib_test.py  image_utils_test.py
python/serving/: Dockerfile  README.md  THIRD_PARTY_LICENSES  __init__.py  entrypoint.sh  model_config.txtpb  predictor.py  predictor_test.py  requirements.in  requirements.txt  server_gunicorn.py
python/serving/serving_framework/: inline_model_runner.py  inline_model_runner_test.py  inline_prediction_executor.py  inline_prediction_executor_test.py  pip-install.txt  requirements.in  server_gunicorn_test.py  server_model_runner.py  server_model_runner_test.py
python/serving/vertex_schemata/: instance.yaml  prediction.yaml
serving/: Dockerfile  README.md  entrypoint.sh  prediction_executor.py  predictor.py  predictor_test.py  requirements.txt  server_gunicorn.py
zero_shot/: cxr_zero_shot_classification.py
(+38 files in other folders)
